# gnustep-github-actions

./: .gitignore  CMakeLists.txt  GNUmakefile  GNUmakefile.sdl  HelloWorldApp.h  HelloWorldApp.m  README.md  SDLRenderer.h  SDLRenderer.m  SDLWindow.h  SDLWindow.m  TextRenderer.h  TextRenderer.m  hello.h  hello.m  sdl_main.m
.github/workflows/: build-gnustep-ubuntu.yml  build-gnustep-windows.yml  build-objc-macos.yml
